get original by alias
